# P5-stock

./: .editorconfig  .env.example  .gitignore  DB.md  DB.mermaid  Dockerfile  README.md  README_FLASK.md  Untitled Diagram_2025-12-01T12_16_15.704Z.json  Untitled Diagram_2025-12-01T12_23_59.477Z.md  Untitled Diagram_2025-12-01T12_24_21.005Z.sql  alembic.ini  cahier_charges_logistique_militaire.md  diagram vercel.json  init_db.py  main.py  package.json  pnpm-lock.yaml  readme.md  requirements.txt  setup-vite.sh  sql.sql  test_api.py  turbo.json
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml
.github/: dependabot.yml
alembic/: env.py
app/: __init__.py  config.py  database.py
backend/: .dockerignore  .env.example  Dockerfile  package.json  pyproject.toml  requirements.txt
backend/database/: __init__.py  config.py  model.py
backend/src/: __init__.py  middleware.py
backend/src/core/: config.py  logs.py  tools.py
backend/src/core/routes/: jsp.py  root.py
backend/src/core/routes/assets/: asset.py  specs.py
backend/src/core/routes/auth/: auth.py
backend/src/database/: config.py  events.py  init_db.py  model.py
backend/src/routes/: auth.py  root.py
backend/src/routes/API/: CRUD.py
backend/src/services/: CRUD_tools.py  config.py  crypto.py  decorators.py  logs.py  tools.py
backend/src/static/css/: style.css
backend/src/templates/: assets.html  login.html
backend/tests/: conftest.py  test_auth.py  test_crud.py  test_services.py
database/: DB v1.1.json  DB v1.json  db v1.1.sql  db v1.sql  model.py  to be updated models.py
(+173 files in other folders)
