[project]
name = "p5-stock-backend"
version = "0.1.0"
description = "P5 Stock Backend - Flask API with PostgreSQL"
requires-python = ">=3.11"
dependencies = [
    "loguru>=0.7.2",
    "flask-limiter>=3.7.0",
    "Flask==3.1.2",
    "Flask-SQLAlchemy==3.1.1",
    "Flask-Migrate>=4.1.0",
    "Gunicorn>=23.0.0",
    "argon2-cffi==25.1.0",
    "argon2-cffi-bindings==25.1.0",
    "blinker==1.9.0",
    "cffi==2.0.0",
    "click==8.3.1",
    "cryptography==46.0.3",
    "greenlet==3.3.0",
    "itsdangerous==2.2.0",
    "Jinja2==3.1.6",
    "MarkupSafe==3.0.3",
    "psycopg[binary]>=3.2.0",
    "pycparser==2.23",
    "PyJWT==2.10.1",
    "python-dotenv==1.2.1",
    "SQLAlchemy>=2.0.45",
    "typing_extensions>=4.15.0",
    "uuid7",
    "Werkzeug==3.1.8",
    "pyotp>=2.9.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
    "pytest-github-actions-annotate-failures>=0.2.0",
    "cryptography>=46.0.0",
    "ruff>=0.4.0",
]

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = "--tb=short"

[tool.coverage.run]
source = ["src"]
omit = ["tests/*"]

[tool.coverage.report]
show_missing = true
skip_covered = false

[tool.uv]
